Add base html to index.html to display buttons

--- a/index.html
+++ b/index.html
@@ -5,5 +5,19 @@
         <title>Rock Paper Scissors!</title>
         <script src="script.js"></script>
     </head>
+    <body>
+        <div class="buttons">
+            <div class="button">
+                <button></button>
+            </div>
+            <div class="button">
+                <button></button>
+            </div>
+            <div class="button">
+                <button></button>
+            </div>
+        </div>
+        
+    </body>
     
 </html>
