--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
     <head>
         <meta charset="utf-8">
         <title>Rock Paper Scissors!</title>
-        <script src="script.js"></script>
+        <script src="script.js" defer></script>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="buttons">
-            <div class="button">
+        <div class="btns">
+            <div class="btn">
                 <button></button>
             </div>
-            <div class="button">
+            <div class="btn">
                 <button></button>
             </div>
-            <div class="button">
+            <div class="btn">
                 <button></button>
             </div>
         </div>
