--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <body>
         <div class="btns">
             <div class="btn">
-                <button></button>
+                <button>Rock</button>
             </div>
             <div class="btn">
-                <button></button>
+                <button>Paper</button>
             </div>
             <div class="btn">
-                <button></button>
+                <button>Scissors</button>
             </div>
         </div>
         
