--- a/index.html
+++ b/index.html
@@ -7,18 +7,30 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        <div class="btns">
-            <div class="btn">
-                <button>Rock</button>
+        <div class="container">
+            <div class="scores">
+                <div class="u-score">
+                    <h1>User Score</h1>
+                </div>
+                <div class="game">
+                    <h1>GAME</h1>
+                </div>
+                <div class="c-score">
+                    <h1>CPU SCORE</h1>
+                </div>
             </div>
-            <div class="btn">
-                <button>Paper</button>
-            </div>
-            <div class="btn">
-                <button>Scissors</button>
+            <div class="btns">
+                <div class="btn">
+                    <button>Rock</button>
+                </div>
+                <div class="btn">
+                    <button>Paper</button>
+                </div>
+                <div class="btn">
+                    <button>Scissors</button>
+                </div>
             </div>
         </div>
-        
     </body>
     
 </html>
