Add additional styling and placeholder values

--- a/index.html
+++ b/index.html
@@ -11,13 +11,18 @@
             <div class="scores">
                 <div class="u-score">
                     <h1>User Score</h1>
-                    
+                    <div class="score">
+                        0
+                    </div>
                 </div>
                 <div class="game">
                     <h1>GAME</h1>
                 </div>
                 <div class="c-score">
                     <h1>CPU SCORE</h1>
+                    <div class="score">
+                        0
+                    </div>
                 </div>
             </div>
             <div class="btns">
