Add counter functionality that increments whenever a round plays

--- a/index.html
+++ b/index.html
@@ -9,20 +9,20 @@
     <body>
         <div class="container">
             <div class="scores">
-                <div class="u-score">
+                <div class="score">
                     <h1>User Score</h1>
-                    <div class="score">
+                    <p id="u-score">
                         0
-                    </div>
+                    </p>
                 </div>
                 <div class="game">
                     <h1>GAME</h1>
                 </div>
-                <div class="c-score">
+                <div class="score">
                     <h1>CPU SCORE</h1>
-                    <div class="score">
+                    <p id="c-score">
                         0
-                    </div>
+                    </p>
                 </div>
             </div>
             <div class="btns">
