--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
                 </div>
                 <div class="game">
                     <h1>GAME</h1>
+                    <p></p>
                 </div>
                 <div class="score">
                     <h1>CPU SCORE</h1>
@@ -26,15 +27,9 @@
                 </div>
             </div>
             <div class="btns">
-                <div class="btn">
-                    <button>Rock</button>
-                </div>
-                <div class="btn">
-                    <button>Paper</button>
-                </div>
-                <div class="btn">
-                    <button>Scissors</button>
-                </div>
+                    <button class="btn">Rock</button>
+                    <button class="btn">Paper</button>
+                    <button class="btn">Scissors</button>
             </div>
         </div>
     </body>
