Add function comments and html formatting

--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
                 <div class="game">
                     <h1>GAME</h1>
                     <p></p>
+                    <div class="state">
+                        <p id="u-choice">nun</p>
+                        <p>vs.</p>
+                        <p id="c-choice">nun</p>
+                    </div>
                 </div>
                 <div class="score">
                     <h1>CPU SCORE</h1>
