Add round counter and round-by-round win message

--- a/index.html
+++ b/index.html
@@ -17,11 +17,12 @@
                 </div>
                 <div class="game">
                     <h1>GAME</h1>
-                    <p></p>
+                    <p id="winner">&nbsp;</p>
+                    <p id="round">Round: 0</p>
                     <div class="state">
-                        <p id="u-choice">nun</p>
+                        <p id="u-choice">&nbsp;</p>
                         <p>vs.</p>
-                        <p id="c-choice">nun</p>
+                        <p id="c-choice">&nbsp;</p>
                     </div>
                 </div>
                 <div class="score">
