Replace button text with images of possible choices

--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
                 </div>
             </div>
             <div class="btns">
-                    <button class="btn">Rock</button>
-                    <button class="btn">Paper</button>
-                    <button class="btn">Scissors</button>
+                    <button id="Rock" class="btn"><img id="Rock" src="./images/rock.png"></button>
+                    <button id="Paper" class="btn"><img id="Paper" src="./images/paper.png"></button>
+                    <button id="Scissors" class="btn"><img id="Scissors" src="./images/scissors.png"></button>
             </div>
         </div>
     </body>
