Refactor function to include decideRound in playRound

--- a/index.html
+++ b/index.html
@@ -20,9 +20,11 @@
                     <p id="winner">&nbsp;</p>
                     <p id="round">Round: 0</p>
                     <div class="state">
-                        <p id="u-choice">&nbsp;</p>
-                        <p>vs.</p>
-                        <p id="c-choice">&nbsp;</p>
+                        <div id="u-choice"><img></div>
+                        <div class="vs">
+                            <p>vs.</p>
+                        </div>
+                        <div id="c-choice"><img></div>
                     </div>
                 </div>
                 <div class="score">
