Commit for good measure

--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                     <button id="Paper" class="btn"><img id="Paper" src="./images/paper.png"></button>
                     <button id="Scissors" class="btn"><img id="Scissors" src="./images/scissors.png"></button>
             </div>
+            <div id="play-again">
+                <button>Play Again!</button>
+            </div>
         </div>
     </body>
     
