--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
                 <div class="game">
                     <h1>GAME</h1>
                     <p id="winner">&nbsp;</p>
-                    <p id="round">Round: 0</p>
+                    <div class="user-CPU">
+                        <p>User</p>
+                        <p id="round">Round: 0</p>
+                        <p>CPU</p>
+                    </div>
                     <div class="state">
                         <div id="u-choice"><img></div>
                         <div class="vs">
