Change id to lowercase for button ids

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 </div>
             </div>
             <div class="btns">
-                    <button id="Rock" class="btn"><img id="Rock" src="./images/rock.png"></button>
-                    <button id="Paper" class="btn"><img id="Paper" src="./images/paper.png"></button>
-                    <button id="Scissors" class="btn"><img id="Scissors" src="./images/scissors.png"></button>
+                    <button id="rock" class="btn"><img id="Rock" src="./images/rock.png"></button>
+                    <button id="paper" class="btn"><img id="Paper" src="./images/paper.png"></button>
+                    <button id="scissors" class="btn"><img id="Scissors" src="./images/scissors.png"></button>
             </div>
             <div id="play-again">
                 <button>Play Again!</button>
