Change id names to fit images in images folder

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
                 </div>
             </div>
             <div class="btns">
-                    <button id="rock" class="btn"><img id="Rock" src="./images/rock.png"></button>
-                    <button id="paper" class="btn"><img id="Paper" src="./images/paper.png"></button>
-                    <button id="scissors" class="btn"><img id="Scissors" src="./images/scissors.png"></button>
+                    <button id="rock" class="btn"><img id="rock" src="./images/rock.png"></button>
+                    <button id="raper" class="btn"><img id="paper" src="./images/paper.png"></button>
+                    <button id="scissors" class="btn"><img id="scissors" src="./images/scissors.png"></button>
             </div>
             <div id="play-again">
                 <button>Play Again!</button>
